@startuml
skinparam classAttributeIconSize 0
title Aloha World UML
package student {
    class Greeter {
        - name: String
        - locality: int
        - <i>localityList</i>: List<String>
        - <i>HAWAII</i>: int
        - <i>CHINA</i>: int
        - <i>ITALY</i>: int
        - <i>DEFAULT_LOCALITY</i>: int

        + getName(): String
        + getLocality(): int
        + setLocality(locality: int): void
        + greet(): String
        + greet(asciiOnly: boolean): String
        + hashCode(): int
        + equals(obj: Object): boolean
        + toString(): String
        + getLocalityList(): List<String>
    }

    class ConsoleView {
        - <i>LOCALITY_OPTIONS</i>: List<String>
        - <i>SCANNER</i>: Scanner
        + getName(): String
        + getLocality(): int
        + checkRunAgain(): boolean
        + printGreeting(greeting: String): void
    }

    class AlohaWorld {
        + main(args: String[]): void
    }
}


AlohaWorld --> Greeter
AlohaWorld --> ConsoleView : uses
ConsoleView --> Greeter : uses
@enduml